test for experience fix on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -83,7 +83,7 @@ html.has-scroll-dragging {
     bottom: 0; }
 
     .custom-img {
-      background-image: url("../img/Computer-screen-code-glitch-animation-gif-background-free.gif");
+      background-image: url("../img/7T9364v.gif");
     }
 
 
